Revert naomibintool changes due to win32 compilation issues

--- a/utils/naomibintool/Makefile
+++ b/utils/naomibintool/Makefile
@@ -6,8 +6,8 @@
 
 all: naomibintool
 
-naomibintool: naomibintool.c
-	$(CC) -o naomibintool naomibintool.c -lelf
+naomibin: naomibintool.c
+	$(CC) -o naomibintool naomibintool.c
 
 clean:
 	-rm -f naomibintool
